# adminA

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/adminA/: models.py  serializers.py  urls.py  views.py
src/adminA/migrations/: 0001_initial.py
src/adminA/static/adminA/: asset-manifest.json  index.html
src/adminA/static/adminA/static/css/: 2.69771427.chunk.css  2.69771427.chunk.css.map  main.9e1e7881.chunk.css  main.9e1e7881.chunk.css.map
src/adminA/static/adminA/static/js/: 2.3d52d79e.chunk.js  2.3d52d79e.chunk.js.LICENSE.txt  main.bf87dd4c.chunk.js  main.bf87dd4c.chunk.js.map  main.f73a08ef.chunk.js  main.f73a08ef.chunk.js.map  runtime-main.b241f7dd.js  runtime-main.b241f7dd.js.map
